feat: started working on "create" and "join" with option for choosing color, to be continued